# manga-organizer

./: .gitignore  README.md  __main__.py  config.toml  main.py  pyproject.toml
src/: __init__.py
src/manga_organizer/: __init__.py  file_operations.py  run.py
tests/: test_file_operations.py
